--- a/reverse-proxy/docker-compose.yml
+++ b/reverse-proxy/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3.8"
+version: "3.9"
 
 services:
 
   traefik:
-    image: traefik:latest
+    image: traefik:v2.4.0
     container_name: traefik
     restart: always
     command:
@@ -12,14 +12,13 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web-secure.address=:443"
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=example@email.com"
+      - "--certificatesresolvers.myresolver.acme.email=aareskjold.haakon@gmail.com"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
-        # - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory" 
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./letsencrypt:/letsencrypt
+      - letsencrypt:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock
 
   portainer:
@@ -27,24 +26,16 @@ services:
     container_name: portainer
     command: -H unix:///var/run/docker.sock
     restart: always
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.portainer.middlewares=redirect-to-https"
-      - "traefik.http.routers.portainer.rule=Host(`portainer.example.com`)"
-      - "traefik.http.routers.portainer.entrypoints=web"
-      - "traefik.http.routers.portainer-secure.rule=Host(`portainer.example.com`)"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
-      - "traefik.http.routers.portainer-secure.tls=true"
-      - "traefik.http.routers.portainer-secure.tls.certresolver=myresolver"
-      - "traefik.docker.network=traefik-proxy"
+    ports:
+      - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
 
 
-  volumes:
-    portainer_data:
+volumes:
+ portainer_data:
+ letsencrypt:
 
 networks:
         default:
