--- a/reverse-proxy/docker-compose.yml
+++ b/reverse-proxy/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web-secure.address=:443"
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=aareskjold.haakon@gmail.com"
+      - "--certificatesresolvers.myresolver.acme.email=example@gmail.com"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
       - "80:80"
